implemented all datasets.

--- a/index.html
+++ b/index.html
@@ -53,12 +53,19 @@
       </div>
       <div id="dropHomophobie" class="dropSw">
         <select id="homoDrop" class="prefDrop" name="dropHomophobie">
-          <option selected="selected">schwuchtel</option>
+          <option selected="selected">alle</option>
+          <option value="schwuchtel">schwuchtel</option>
+          <option value="schwulette">schwulette</option>
+          <option value="faggot">faggot</option>
+          <option value="homofuerst">homofürst</option>
         </select>
       </div>
       <div id="dropBehinderung" class="dropSw">
         <select id="behDrop" class="prefDrop" name="dropBehinderung">
-          <option selected="selected">krüppel</option>
+          <option selected="selected">alle</option>
+          <option value="krueppel">krüppel</option>
+          <option value="spasti">spasti</option>
+          <option value="mongo">mongo</option>
         </select>
       </div>
     </div>
@@ -93,16 +100,73 @@
   <iframe id="fluechtN_alle" src="visualization/txt/fluechtlinge_coords.txt" onload="loadLayerData('fluechtN_alle');" style="display: none;"></iframe>
   <iframe id="fluechtPN_alle" src="visualization/txt/fluechtlinge_coords_pn2.txt" style="display: none;"></iframe>
   <iframe id="fluechtTN_alle" src="visualization/txt/fluechtlinge_coords_tn.txt" style="display: none;"></iframe>
+
   <iframe id="fluechtN_rapefugees" src="visualization/txt/fluechtlinge_rapefugees_coords.txt" style="display: none;"></iframe>
   <iframe id="fluechtPN_rapefugees" src="visualization/txt/fluechtlinge_rapefugees_coords_pn.txt" style="display: none;"></iframe>
   <iframe id="fluechtTN_rapefugees" src="visualization/txt/fluechtlinge_rapefugees_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="fluechtN_deport" src="visualization/txt/fluechtlinge_deport_coords.txt" style="display: none;"></iframe>
+  <iframe id="fluechtPN_deport" src="visualization/txt/fluechtlinge_deport_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="fluechtTN_deport" src="visualization/txt/fluechtlinge_deport_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="fluechtN_krimigranten" src="visualization/txt/fluechtlinge_krimigranten_coords.txt" style="display: none;"></iframe>
+  <iframe id="fluechtPN_krimigranten" src="visualization/txt/fluechtlinge_krimigranten_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="fluechtTN_krimigranten" src="visualization/txt/fluechtlinge_krimigranten_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="fluechtN_migrantcrisis" src="visualization/txt/fluechtlinge_migrantcrisis_coords.txt" style="display: none;"></iframe>
+  <iframe id="fluechtPN_migrantcrisis" src="visualization/txt/fluechtlinge_migrantcrisis_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="fluechtTN_migrantcrisis" src="visualization/txt/fluechtlinge_migrantcrisis_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="fluechtN_refugeecrisis" src="visualization/txt/fluechtlinge_refugeecrisis_coords.txt" style="display: none;"></iframe>
+  <iframe id="fluechtPN_refugeecrisis" src="visualization/txt/fluechtlinge_refugeecrisis_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="fluechtTN_refugeecrisis" src="visualization/txt/fluechtlinge_refugeecrisis_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="fluechtN_stopislam" src="visualization/txt/fluechtlinge_stopislam_coords.txt" style="display: none;"></iframe>
+  <iframe id="fluechtPN_stopislam" src="visualization/txt/fluechtlinge_stopislam_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="fluechtTN_stopislam" src="visualization/txt/fluechtlinge_stopislam_coords_tn.txt" style="display: none;"></iframe>
   
   <!-- Homophobie -->
   <iframe id="homoN_alle" src="visualization/txt/homophobie_coords.txt" style="display: none;"></iframe>
   <iframe id="homoPN_alle" src="visualization/txt/homophobie_coords_pn.txt" style="display: none;"></iframe>
   <iframe id="homoTN_alle" src="visualization/txt/homophobie_coords_tn.txt" style="display: none;"></iframe>
 
+  <iframe id="homoN_schwuchtel" src="visualization/txt/homophobie_schwuchtel_coords.txt" style="display: none;"></iframe>
+  <iframe id="homoPN_schwuchtel" src="visualization/txt/homophobie_schwuchtel_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="homoTN_schwuchtel" src="visualization/txt/homophobie_schwuchtel_coords_tn.txt" style="display: none;"></iframe>
 
+  <iframe id="homoN_schwulette" src="visualization/txt/homophobie_schwulette_coords.txt" style="display: none;"></iframe>
+  <iframe id="homoPN_schwulette" src="visualization/txt/homophobie_schwulette_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="homoTN_schwulette" src="visualization/txt/homophobie_schwulette_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="homoN_faggot" src="visualization/txt/homophobie_faggot_coords.txt" style="display: none;"></iframe>
+  <iframe id="homoPN_faggot" src="visualization/txt/homophobie_faggot_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="homoTN_faggot" src="visualization/txt/homophobie_faggot_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="homoN_gaylord" src="visualization/txt/homophobie_gaylord_coords.txt" style="display: none;"></iframe>
+  <iframe id="homoPN_gaylord" src="visualization/txt/homophobie_gaylord_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="homoTN_gaylord" src="visualization/txt/homophobie_gaylord_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="homoN_homofuerst" src="visualization/txt/homophobie_homofuerst_coords.txt" style="display: none;"></iframe>
+  <iframe id="homoPN_homofuerst" src="visualization/txt/homophobie_homofuerst_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="homoTN_homofuerst" src="visualization/txt/homophobie_homofuerst_coords_tn.txt" style="display: none;"></iframe>
+
+  <!-- Behinderung -->
+
+  <iframe id="behN_alle" src="visualization/txt/behinderung_coords.txt" style="display: none;"></iframe>
+  <iframe id="behPN_alle" src="visualization/txt/behinderung_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="behTN_alle" src="visualization/txt/behinderung_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="behN_krueppel" src="visualization/txt/behinderung_krueppel_coords.txt" style="display: none;"></iframe>
+  <iframe id="behPN_krueppel" src="visualization/txt/behinderung_krueppel_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="behTN_krueppel" src="visualization/txt/behinderung_krueppel_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="behN_mongo" src="visualization/txt/behinderung_mongo_coords.txt" style="display: none;"></iframe>
+  <iframe id="behPN_mongo" src="visualization/txt/behinderung_mongo_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="behTN_mongo" src="visualization/txt/behinderung_mongo_coords_tn.txt" style="display: none;"></iframe>
+
+  <iframe id="behN_spasti" src="visualization/txt/behinderung_spasti_coords.txt" style="display: none;"></iframe>
+  <iframe id="behPN_spasti" src="visualization/txt/behinderung_spasti_coords_pn.txt" style="display: none;"></iframe>
+  <iframe id="behTN_spasti" src="visualization/txt/behinderung_spasti_coords_tn.txt" style="display: none;"></iframe>
 
 
    <iframe id="fluechtlingeFD" src="visualization/txt/fluechtlingeFD.txt" style="display: none;"></iframe>
